examples/test/testpolicy2303.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy2303
  namespace: namespace224
spec:
  podSelector:
    matchLabels:
      key12: value22
      key2: value10
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key25: value27
          key45: value13
          key38: value13
      podSelector:
        matchLabels:
          key17: value46
          key35: value10
